# Library-Management-System

./: .gitignore  CMakeLists.txt  README.md  database.h  main.cpp  run.bat  run.ps1  run.sh  transaction.h  users.h  utils.h
cli/: home.h  login_lib.h  login_stud_fac.h
